@@ -78,6 +78,10 @@ User=nobody
 # NOTE: Always place a slash as last character !
 DriverPath=server/drivers/
 
+# GoodBye message: each entry represents a display line; default: builtin
+#GoodBye="Thanks for using"
+#GoodBye="   LCDproc!"
+
 # The "...Key=" lines define what the server does with keypresses that
 # don't go to any client.
 # These are the defaults:
