@@ -221,6 +221,39 @@ settings for the LCDproc server <application>LCDd</application>.
     to syslog. Defaults to <literal>no</literal>.
   </para></listitem>
 </varlistentry>
+
+<varlistentry>
+  <term>
+    <command>GoodBye=</command>
+    <arg choice="plain"><replaceable>GOODBYEMSG</replaceable></arg>
+  </term>
+  <listitem>
+    <para>
+      Define the message left on the screen when LCDd exits.
+      If not given, it defaults to the builtin
+      <literal>Thanks for using LCDproc!</literal>.
+      If it is given, each <code>GoodBye=</code> directive represents
+      a line on the display.
+    </para>
+    <para>
+      The <replaceable>GOODBYEMSG</replaceable>s will be printed on
+      the display one after each other starting on the beginning of each line.
+      So, the definition of
+      <programlisting>
+        GoodBye="       So Long,"
+        GoodBye="         and"
+        GoodBye="Thanks for All the Fish!"
+      </programlisting>
+      prints the well known dolphin's message on the first 3 lines
+      of the display (which obviously needs to be 24 columns wide
+      to show the full last line).
+    </para>
+    <para>
+      To simply disable the default builtin message, and leave the screen blank
+      a single <code>GoodBye=""</code> suffices.
+    </para>
+  </listitem>
+</varlistentry>
 </variablelist>
 
 
