@@ -37,6 +37,7 @@ v.0.5dev (ongoing development)
  + picolcd - driver for Mini-box.com USB LCD picoLCD (Gatewood Green)
  + new ConnectionType pertelian in hd44780 driver (Matteo Pillon)
  + new ConnectionType lcd2usb in hd44780 driver
+ + make LCDd's GoodBye message configurable
 
 v.0.5.1
  + config file support in lcdproc client (Andrew Foss)
